--- a/index.html
+++ b/index.html
@@ -47,18 +47,18 @@
                     <ul class="carousel-track">
                         <li class="carousel-item">
                             <h3>SULFIT</h3>
-                            <img src="./img/sulfit.png" alt="Logo Sulfit">
+                            <img src="/img/sulfit.png" alt="Logo Sulfit">
                             <p>Saúde • Bem-estar • Fitness</p>
                             <p>Com foco em Saúde, Bem-estar e fitness, site desenvolvido pensando no corpo e no desenvolvimento pessoal</p>
                         </li>
                         <li class="carousel-item">
                             <h3>HARPIA</h3>
-                            <img src="./img/harpia.png" alt="Logo With Eyes on the Globe">
+                            <img src="/img/harpia.png" alt="Logo With Eyes on the Globe">
                             <p>O protótipo de aplicativo mobile de monitoramento de clima foca em alertas em tempo real sobre condições meteorológicas e desastres naturais, como furacões, secas e inundações. Além disso, o app facilita a venda de créditos de carbono de regiões afetadas por desastres ou pelo excesso de emissões, conectando empresas e indivíduos para compensação ambiental. A plataforma oferece dados de satélites e sensores locais, além de uma interface simples para monitoramento de projetos de sustentabilidade, incentivando ações contra as mudanças climáticas e apoiando a recuperação de áreas devastadas.</p>
                         </li>
                         <li class="carousel-item doe-se-card">
                             <h3>DOE-SE</h3>
-                            <img src="./img/DOE-SE.png" alt="Logo DOE-SE">
+                            <img src="/img/DOE-SE.png" alt="Logo DOE-SE">
                             <p>Participando projeto em SQUAD criação de um site de doações</p>
                             <p>O site facilita a doação de itens de forma simples e acessível, com uma interface intuitiva para usuários sem experiência em tecnologia. Ele permite o cadastro rápido de itens, como roupas, alimentos e móveis, e conecta os doadores a organizações ou pessoas necessitadas. Com categorias claras e uma busca fácil, qualquer pessoa pode fazer doações de maneira prática. A plataforma também oferece tutoriais e suporte para garantir que todos possam contribuir de forma descomplicada.</p>
                         </li>
